--- a/Gaming club-project/client/src/components/games-details/comments-answers/CommentAnswers.module.css
+++ b/Gaming club-project/client/src/components/games-details/comments-answers/CommentAnswers.module.css
@@ -10,10 +10,10 @@
 .modal {
     position: fixed;
     background-color: rgba(0, 0, 0, 0.7);
+    padding: 1000px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 1000px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     z-index: 1000;
@@ -36,9 +36,9 @@
 }
 
 .wrapper {
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 470px;
+    position: fixed;
+    right: 28%;
+    top: 30%;
     padding: 20px;
     width: 800px;
     height: auto;
@@ -67,6 +67,7 @@
     border: none;
     font-size: 14pt;
     font-family: Arial, Helvetica, sans-serif;
+    color: aliceblue;
 }
 
 .form input::placeholder {
@@ -108,4 +109,19 @@
     font-size: 18pt;
     color: grey;
     margin-right: 7px;
+}
+
+.backDrop {
+    position: absolute;
+    background-color: rgb(89, 86, 86);
+    color: grey;
+    top: 0;
+    right: 15px;
+    padding: 0;
+    width: 0;
+    height: 0;
+}
+
+.backDrop {
+    color: lightgray;
 }
