--- a/Gaming club-project/client/src/components/games-details/comments-answers/CommentAnswers.module.css
+++ b/Gaming club-project/client/src/components/games-details/comments-answers/CommentAnswers.module.css
@@ -10,7 +10,10 @@
 .modal {
     position: fixed;
     background-color: rgba(0, 0, 0, 0.7);
-    padding: 1000px;
+    width: 98%;
+    height: 100%;
+    max-height: 94vh;
+    padding: 20px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -21,6 +24,7 @@
     color: aliceblue;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    overflow: auto;
 }
 
 .loadingSpinner {
@@ -36,14 +40,15 @@
 }
 
 .wrapper {
-    position: fixed;
-    right: 28%;
-    top: 30%;
+    position: absolute;
+    top: 50px;
+    right: 500px;
     padding: 20px;
     width: 800px;
     height: auto;
     background-color: rgb(89, 86, 86);
     border-radius: 15px;
+    margin-bottom: 20px;
 }
 
 .answers {
