Implement loading spinner and error handling in catalog

--- a/Movie list/client/src/components/catalog/Catalog.module.css
+++ b/Movie list/client/src/components/catalog/Catalog.module.css
@@ -110,7 +110,7 @@
 
 .loadingSpinner {
     position: absolute;
-    top: 45%;
+    top: 47%;
     left: 45%;
     width: 70px;
     height: 70px;
@@ -174,5 +174,8 @@
     }
     .catalogForm button i {
         font-size: 12pt;
+    }
+    .loadingSpinner {
+        top: 50%;
     }
 }
