--- a/Movie list/client/src/components/FormsAndErrors.module.css
+++ b/Movie list/client/src/components/FormsAndErrors.module.css
@@ -20,6 +20,7 @@
 }
 
 .form {
+    position: relative;
     display: block;
     margin: 0 auto;
     margin-top: 20px;
@@ -45,6 +46,10 @@
     font-size: 14pt;
 }
 
+.form div {
+    position: relative;
+}
+
 .form button {
     display: block;
     margin: 0 auto;
@@ -66,7 +71,7 @@
 
 .form p a {
     text-decoration: none;
-    color: rgb(170, 166, 166)
+    color: rgb(170, 166, 166);
 }
 
 .form p a:hover {
@@ -81,6 +86,15 @@
 
 .form i {
     font-size: 25pt;
+}
+
+.form #seePassword {
+    position: absolute;
+    top: 53px;
+    right: 65px;
+    font-size: 16pt;
+    color: black;
+    cursor: pointer;
 }
 
 @media(max-width:750px) {
@@ -103,5 +117,10 @@
     }
     .form i {
         font-size: 18pt;
+    }
+    .form #seePassword {
+        bottom: 145px;
+        right: 80px;
+        font-size: 12pt;
     }
 }
