--- a/Movie list/client/src/components/FormsAndErrors.module.css
+++ b/Movie list/client/src/components/FormsAndErrors.module.css
@@ -33,6 +33,7 @@
     font-size: 16pt;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 100px;
 }
 
 .form input {
