--- a/Movie list/client/src/components/movie-details/MovieDetails.module.css
+++ b/Movie list/client/src/components/movie-details/MovieDetails.module.css
@@ -35,12 +35,12 @@
     margin-bottom: 20px;
 }
 
-.detailsWrapper div {
+.detailsWrapper article {
     display: block;
     margin: 0 auto;
 }
 
-.detailsWrapper div p {
+.detailsWrapper article p {
     display: inline-block;
     margin-right: 60px;
 }
@@ -171,17 +171,17 @@
     background-color: yellow;
 }
 
-.commentWrapper div {
+.commentWrapper section {
     display: block;
     margin: 0 auto;
     margin-top: 20px;
     width: 750px;
-    padding: 10px;
+    padding: 20px;
     border-radius: 15px;
     background-color: rgb(44, 44, 44);
 }
 
-.commentWrapper div div {
+.commentWrapper section article {
     position: relative;
     display: block;
     width: 750px;
@@ -189,17 +189,17 @@
     margin-bottom: -25px;
 }
 
-.commentWrapper div div h2 {
+.commentWrapper section article h2 {
     display: inline-block;
     text-align: left;
     margin-top: -50px;
 }
 
-.commentWrapper div p {
+.commentWrapper section p {
     word-wrap: break-word;
 }
 
-.commentWrapper div div i {
+.commentWrapper section article i {
     display: inline-block;
     margin-left: 15px;
     font-size: 18pt;
@@ -214,14 +214,14 @@
     background-color: rgb(75, 73, 73);
 }
 
-.commentWrapper div div #ownerCommentLikes {
+.commentWrapper section article #ownerCommentLikes {
     position: absolute;
     top: -10px;
     right: 30px;
     cursor: default;
 }
 
-.commentWrapper div div #guestCommentLikes {
+.commentWrapper section article #guestCommentLikes {
     position: absolute;
     top: -10px;
     right: 30px;
@@ -234,7 +234,7 @@
     right: 30px;
 }
 
-.commentWrapper div div p {
+.commentWrapper section article p {
     position: absolute;
     right: 35px;
     top: 0;
@@ -250,7 +250,7 @@
         width: 250px;
         height: 250px;
     }
-    .detailsWrapper div p {
+    .detailsWrapper article p {
         display: block;
         margin-right: 0;
     }
@@ -315,30 +315,30 @@
         margin-top: 10px;
         font-size: 12pt;
     }
-    .commentWrapper div {
+    .commentWrapper section {
         margin-top: 20px;
         width: 250px;
     }
-    .commentWrapper div div {
+    .commentWrapper section article {
         width: 250px;
         margin-bottom: -10px;
     }
-    .commentWrapper div div i {
+    .commentWrapper section article i {
         font-size: 14pt;
     }
     .commentWrapper .yourComment {
         background-color: rgb(75, 73, 73);
     }
-    .commentWrapper div div #ownerCommentLikes {
+    .commentWrapper section article #ownerCommentLikes {
         top: -5px;
     }
-    .commentWrapper div div #guestCommentLikes {
+    .commentWrapper section article #guestCommentLikes {
         top: -5px;
     }
     .commentWrapper #commentLikes {
         top: -5px;
     }
-    .commentWrapper div div p {
+    .commentWrapper section article p {
         font-size: 12pt;
     }
 }
