--- a/Movie list/client/src/components/catalog/Catalog.module.css
+++ b/Movie list/client/src/components/catalog/Catalog.module.css
@@ -122,6 +122,18 @@
     animation-iteration-count: infinite;
 }
 
+.modal {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.7);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1000px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+}
+
 @media(max-width:1300px) {
     .catalogContent {
         width: 500px;
