--- a/Movie list/client/src/components/profile/ProfileMovies.module.css
+++ b/Movie list/client/src/components/profile/ProfileMovies.module.css
@@ -57,13 +57,39 @@
 .modal {
     position: fixed;
     background-color: rgba(0, 0, 0, 0.7);
+    width: 98%;
+    height: 100%;
+    max-height: 94vh;
+    padding: 20px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 1000px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     z-index: 1000;
+    overflow: auto;
+}
+
+.modal h1 {
+    color: white;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.modal>button {
+    position: absolute;
+    right: 40px;
+    top: 20px;
+    background-color: rgb(29, 29, 29);
+    border: none;
+    border-radius: 50%;
+    color: grey;
+    font-size: 24pt;
+    cursor: pointer;
+}
+
+.modal>button:hover {
+    color: lightgray;
 }
 
 @media(max-width:1300px) {
@@ -100,5 +126,8 @@
         width: 70px;
         height: 35px;
         font-size: 12pt;
+    }
+    .modal>button {
+        font-size: 20pt;
     }
 }
