--- a/Movie list/client/src/components/profile/Profile.module.css
+++ b/Movie list/client/src/components/profile/Profile.module.css
@@ -35,6 +35,16 @@
     cursor: pointer;
 }
 
+.profileHeader a {
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    text-decoration: none;
+    width: 120px;
+    height: 40px;
+}
+
 .profileHeader button:hover {
     background-color: yellow;
 }
@@ -84,6 +94,10 @@
     }
     .profileHeader button {
         font-size: 12pt;
+        width: 100px;
+        height: 30px;
+    }
+    .profileHeader a {
         width: 100px;
         height: 30px;
     }
