--- a/Movie list/client/src/components/FormsAndErrors.module.css
+++ b/Movie list/client/src/components/FormsAndErrors.module.css
@@ -100,6 +100,15 @@
     cursor: pointer;
 }
 
+.form #seeChangePassword {
+    position: absolute;
+    top: 8px;
+    right: 65px;
+    font-size: 16pt;
+    color: black;
+    cursor: pointer;
+}
+
 .modal {
     position: fixed;
     background-color: rgba(0, 0, 0, 0.7);
