--- a/Movie list/client/src/components/profile/Profile.module.css
+++ b/Movie list/client/src/components/profile/Profile.module.css
@@ -21,11 +21,9 @@
 }
 
 .profileHeader button {
-    display: block;
-    margin: 0 auto;
-    margin-top: 20px;
+    display: inline-block;
     width: 130px;
-    height: 50px;
+    height: 70px;
     border: none;
     background-color: rgb(200, 200, 7);
     font-size: 18pt;
@@ -36,13 +34,14 @@
 }
 
 .profileHeader a {
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 10px;
+    display: inline-flex;
+    margin-left: 50px;
+    margin-right: 30px;
+    margin-bottom: 20px;
     margin-top: 20px;
     text-decoration: none;
     width: 120px;
-    height: 40px;
+    height: 50px;
 }
 
 .profileHeader button:hover {
@@ -94,12 +93,16 @@
     }
     .profileHeader button {
         font-size: 12pt;
-        width: 100px;
-        height: 30px;
+        width: 80px;
+        height: 50px;
     }
     .profileHeader a {
-        width: 100px;
+        width: 80px;
         height: 30px;
+        margin-left: 20px;
+        margin-right: 10px;
+        margin-top: 10px;
+        margin-bottom: 20px;
     }
     .profileBody {
         width: 300px;
