--- a/Movie list/client/src/components/catalog/Catalog.module.css
+++ b/Movie list/client/src/components/catalog/Catalog.module.css
@@ -44,6 +44,7 @@
     font-size: 14pt;
     border-radius: 20px;
     border: none;
+    padding-left: 10px;
 }
 
 .catalogForm input::placeholder {
@@ -71,7 +72,7 @@
 .catalogContent {
     display: block;
     margin: 0 auto;
-    width: 1400px;
+    width: 1300px;
     text-align: center;
     font-size: 16pt;
     color: white;
