--- a/Movie list/client/src/components/FormsAndErrors.module.css
+++ b/Movie list/client/src/components/FormsAndErrors.module.css
@@ -154,4 +154,8 @@
         right: 40px;
         font-size: 12pt;
     }
+    .form #seeChangePassword {
+        right: 40px;
+        top: 6px;
+    }
 }
