Implement responsive full image size

--- a/Movie list/client/src/components/profile/full-image/FullImage.module.css
+++ b/Movie list/client/src/components/profile/full-image/FullImage.module.css
@@ -16,3 +16,10 @@
     width: 600px;
     height: 600px;
 }
+
+@media(max-width:750px) {
+    .modal img {
+        width: 250px;
+        height: 250px;
+    }
+}
