--- a/Movie list/client/src/components/movie-details/movie-details-likes/MovieDetailsLikes.module.css
+++ b/Movie list/client/src/components/movie-details/movie-details-likes/MovieDetailsLikes.module.css
@@ -1,20 +1,24 @@
 .modal {
     position: fixed;
     background-color: rgba(0, 0, 0, 0.7);
+    width: 98%;
+    height: 100%;
+    max-height: 94vh;
+    padding: 20px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 1000px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     z-index: 1000;
+    overflow: auto;
 }
 
 .modal section {
     display: block;
     position: relative;
     margin: 0 auto;
-    margin-top: -350px;
+    margin-bottom: -250px;
     width: 500px;
     background-color: rgb(29, 29, 29);
     border-radius: 20px;
@@ -22,6 +26,7 @@
     font-size: 16pt;
     font-family: Arial, Helvetica, sans-serif;
     padding: 20px;
+    overflow: auto;
 }
 
 .modal section h2 {
@@ -76,7 +81,6 @@
 @media(max-width:750px) {
     .modal section {
         width: 250px;
-        margin-top: -300px;
         font-size: 12pt;
     }
     .modal section article {
