--- a/Movie list/client/src/components/movie-details/comment-answers/CommentAnswers.module.css
+++ b/Movie list/client/src/components/movie-details/comment-answers/CommentAnswers.module.css
@@ -4,7 +4,7 @@
     width: 98%;
     height: 100%;
     max-height: 94vh;
-    padding: 20px;
+    padding: 30px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -85,6 +85,7 @@
 }
 
 .modal section section article {
+    position: relative;
     margin: 0 auto;
     width: 750px;
     border-radius: 15px;
@@ -105,5 +106,6 @@
 }
 
 .modal section section article h3 {
+    margin-top: -30px;
     display: inline-block;
 }
