Implement optional rendering on comment answers

--- a/Movie list/client/src/components/movie-details/MovieDetails.module.css
+++ b/Movie list/client/src/components/movie-details/MovieDetails.module.css
@@ -256,7 +256,8 @@
     cursor: pointer;
 }
 
-.commentWrapper section article i:hover {
+.commentWrapper section article #delete:hover,
+.commentWrapper section article #edit:hover {
     color: yellow;
 }
 
