Implement create answer functionallity

--- a/Movie list/client/src/components/movie-details/comment-answers/CommentAnswers.module.css
+++ b/Movie list/client/src/components/movie-details/comment-answers/CommentAnswers.module.css
@@ -96,6 +96,7 @@
     padding-top: 0;
     text-align: left;
     word-wrap: break-word;
+    margin-bottom: 20px;
 }
 
 .modal section section article img {
